# parking-fee-service

./: .containerignore  .devfile.yaml  .env.example  .gitignore  .night-shift  AGENT.md  AGENTS.md  Containerfile.e2e  Containerfile.goservices  Containerfile.rhivos  Containerfile.rust-builder  Makefile  README.md  go.mod  go.sum  go.work  go.work.sum  prd.md  stuff.json  transcript.md
.agent-fox/: config.toml  state.json
.github/: MCP_VERIFICATION_TEST.md
.kiro/: document-review-findings.md
.specs/: prd.md
android/: README.md
backend/: README.md  go.mod  (+3 more)
mock/sensors/: Cargo.toml  build.rs
mock/sensors/proto/kuksa/val/v1/: types.proto  val.proto
mock/sensors/src/: main.rs
rhivos/: Cargo.toml  README.md
rhivos/.cargo/: config.toml
rhivos/cloud-gateway-client/: Cargo.toml  build.rs
rhivos/cloud-gateway-client/proto/kuksa/: val.proto
rhivos/cloud-gateway-client/proto/kuksa/val/v1/: val.proto
rhivos/cloud-gateway-client/proto/kuksa/val/v2/: val.proto
rhivos/cloud-gateway-client/src/: broker.rs  broker_client.rs  cert_watcher.rs  command.rs  command_handler.rs  command_processor.rs  command_validator.rs  commands.rs  config.rs  databroker_client.rs  error.rs  errors.rs  forwarder.rs  handler.rs  lib.rs  logging.rs  main.rs  messages.rs  models.rs  mqtt.rs  nats_client.rs  offline_buffer.rs  proptest_cases.rs  relay.rs  response.rs  response_relay.rs  result_forwarder.rs  service.rs  status_handler.rs  subscriber.rs  telemetry.rs  test_utils.rs  testing.rs  tests.rs  validator.rs  vin.rs
rhivos/cloud-gateway-client/src/proto/: sdv.services.locking.rs
rhivos/cloud-gateway-client/tests/: command_validator_tests.rs  config_tests.rs  integration.rs  integration_tests.rs  property_tests.proptest-regressions  property_tests.rs  registration_tests.rs  smoke_tests.rs  telemetry_tests.rs  test_command_validator.rs  test_config.rs  test_integration.rs  test_property.rs  test_registration.rs  test_telemetry.rs
rhivos/databroker-client/: Cargo.toml  build.rs
rhivos/databroker-client/src/: client.rs  error.rs  lib.rs  value.rs
rhivos/door-sensor/: Cargo.toml
rhivos/door-sensor/src/: main.rs
rhivos/location-sensor/: Cargo.toml
rhivos/location-sensor/src/: main.rs
rhivos/locking-service/: Cargo.toml  build.rs
rhivos/locking-service/proto/kuksa/val/v1/: val.proto
rhivos/locking-service/src/: auth.rs  broker.rs  command.rs  config.rs  databroker_client.rs  error.rs  executor.rs  lib.rs  lock_handler.rs  logging.rs  main.rs  process.rs  proptest_cases.rs  publisher.rs  response.rs  safety.rs  service.rs  state.rs  testing.rs  validator.rs
rhivos/locking-service/tests/: auth_properties.rs  executor_properties.rs  integration.rs  safety_properties.rs  service_properties.rs
rhivos/mock-sensors/: Cargo.toml  build.rs
rhivos/mock-sensors/proto/kuksa/val/v1/: types.proto  val.proto
rhivos/mock-sensors/src/: door.rs  lib.rs  location.rs  main.rs  speed.rs
rhivos/mock-sensors/tests/: cli_tests.rs  sensor_args.rs  sensor_tests.rs  sensors.rs
rhivos/parking-operator-adaptor/: Cargo.toml  build.rs
rhivos/parking-operator-adaptor/proto/: parking_adaptor.proto
rhivos/parking-operator-adaptor/proto/adapter/: adapter_service.proto
rhivos/parking-operator-adaptor/proto/kuksa/: val.proto
rhivos/parking-operator-adaptor/proto/kuksa/val/v1/: val.proto
rhivos/parking-operator-adaptor/proto/kuksa/val/v2/: val.proto
rhivos/parking-operator-adaptor/proto/parking_adaptor/v1/: adapter_service.proto
rhivos/parking-operator-adaptor/src/: autonomous.rs  broker.rs  config.rs  databroker_client.rs  error.rs  event_handler.rs  event_loop.rs  grpc_server.rs  grpc_service.rs  lib.rs  location.rs  lock_watcher.rs  logging.rs  main.rs  manager.rs  operator.rs  operator_client.rs  poller.rs  proptest_cases.rs  proto.rs  publisher.rs  service.rs  session.rs  session_manager.rs  store.rs  subscriber.rs  test_utils.rs  testing.rs  zone.rs
rhivos/parking-operator-adaptor/src/broker/: mod.rs  publisher.rs  subscriber.rs  traits.rs
rhivos/parking-operator-adaptor/src/grpc/: mod.rs  service.rs
rhivos/parking-operator-adaptor/src/operator/: client.rs  mod.rs  models.rs  retry.rs  traits.rs
rhivos/parking-operator-adaptor/src/proto/: sdv.services.parking.rs
rhivos/parking-operator-adaptor/src/session/: mod.rs  state.rs
rhivos/parking-operator-adaptor/tests/: autonomous_session.rs  integration.rs  integration_error_handling.rs  integration_lock_unlock.rs  integration_manual_override.rs  integration_rest.rs  manual_override_and_consistency.rs  rest_and_errors.rs
rhivos/parking-proto/: Cargo.toml  build.rs
rhivos/parking-proto/src/: kuksa_client.rs  lib.rs  signals.rs
rhivos/safety-tests/: Cargo.toml
rhivos/safety-tests/src/: lib.rs
rhivos/safety-tests/tests/: cloud_gateway_tests.rs  databroker_tests.rs  edge_case_tests.rs  integration.rs  locking_service_tests.rs  mock_sensor_tests.rs  property_tests.rs
rhivos/shared/: Cargo.toml  build.rs
rhivos/shared/src/: config.rs  error.rs  lib.rs
rhivos/shared/src/proto/: mod.rs  sdv.common.rs  sdv.services.databroker.rs  sdv.services.locking.rs  sdv.services.parking.rs  sdv.services.update.rs  sdv.vss.rs
rhivos/speed-sensor/: Cargo.toml
rhivos/speed-sensor/src/: main.rs
rhivos/update-service/: Cargo.toml  build.rs
rhivos/update-service/proptest-regressions/: offload.txt
rhivos/update-service/proto/: update_service.proto
rhivos/update-service/proto/update/: update_service.proto
rhivos/update-service/src/: adapter.rs  adapter_manager.rs  attestation.rs  authenticator.rs  checksum.rs  config.rs  container.rs  container_runtime.rs  container_test.rs  downloader.rs  error.rs  grpc.rs  grpc_handler.rs  grpc_server.rs  grpc_service.rs  grpc_test.rs  install.rs  lib.rs  logger.rs  main.rs  manager.rs  manager_test.rs  model.rs  monitor.rs  oci.rs  oci_client.rs  oci_test.rs  offload.rs  offload_test.rs  offloader.rs  podman.rs  proptest_cases.rs  proto.rs  service.rs  state.rs  state_test.rs  test_utils.rs  testing.rs  tests_install.rs  tests_lifecycle.rs  (+2 more)
rhivos/update-service/tests/: integration.rs
(+929 files in other folders)
