[workspace]
resolver = "2"

members = [
    "locking-service",
    "cloud-gateway-client",
    "parking-operator-adaptor",
    "update-service",
    "shared",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SDV Parking Demo Team"]
license = "Apache-2.0"
repository = "https://github.com/example/parking-fee-service"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# gRPC and Protocol Buffers
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"

# Testing
proptest = "1.4"

# Shared library
shared = { path = "shared" }
