[workspace]
resolver = "2"
members = [
    "parking-proto",
    "locking-service",
    "cloud-gateway-client",
    "update-service",
    "parking-operator-adaptor",
]

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1"
