[package]
name = "mock-sensors"
version = "0.1.0"
edition = "2021"
description = "Mock sensor CLI — publishes VSS signals to Kuksa Databroker"
publish = false
workspace = "../../rhivos"

[[bin]]
name = "mock-sensors"
path = "src/main.rs"

[dependencies]
parking-proto = { path = "../../rhivos/parking-proto" }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
