[package]
name = "cloud-gateway-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.38"
futures = "0.3"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tonic = "0.12"
tracing = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
proptest = "1"
