[package]
name = "cloud-gateway-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.38"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
proptest = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
serial_test = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
