[package]
name = "cloud-gateway-client"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.38"
futures = "0.3"
prost = "0.12"
prost-types = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
proptest = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
serial_test = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
