[package]
name = "databroker-client"
version = "0.1.0"
edition = "2021"
description = "Typed Rust client for Eclipse Kuksa Databroker gRPC API (kuksa.val.v1)"

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tower = { version = "0.4", features = ["util"] }
hyper-util = "0.1"
tracing = "0.1"
thiserror = "2"

[build-dependencies]
tonic-build = { workspace = true }
