[package]
name = "locking-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "locking-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
