[package]
name = "locking-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
futures = "0.3"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"
