[package]
name = "mock-sensors"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive", "env"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }

[[bin]]
name = "mock-sensors"
path = "src/main.rs"

[[bin]]
name = "location-sensor"
path = "src/bin/location-sensor.rs"

[[bin]]
name = "speed-sensor"
path = "src/bin/speed-sensor.rs"

[[bin]]
name = "door-sensor"
path = "src/bin/door-sensor.rs"
