[package]
name = "mock-sensors"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "location-sensor"
path = "src/bin/location-sensor.rs"

[[bin]]
name = "speed-sensor"
path = "src/bin/speed-sensor.rs"

[[bin]]
name = "door-sensor"
path = "src/bin/door-sensor.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"

[build-dependencies]
tonic-build = "0.11"
