[package]
name = "parking-operator-adaptor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parking-operator-adaptor"
path = "src/main.rs"

[lib]
name = "parking_operator_adaptor"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
tonic = "0.11"
prost = "0.12"
futures = "0.3"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
wiremock = "0.5"
