[package]
name = "parking-operator-adaptor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "parking-operator-adaptor"
path = "src/main.rs"

[lib]
name = "parking_operator_adaptor"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
futures = "0.3"
prost = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.11", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
proptest = "1"
wiremock = "0.5"

[build-dependencies]
tonic-build = "0.11"
