[package]
name = "parking-operator-adaptor"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3"
prost = "0.12"
prost-types = "0.12"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
proptest = "1"
serial_test = "3"
wiremock = "0.6"
