[package]
name = "parking-proto"
version = "0.1.0"
edition = "2021"
description = "Generated gRPC/protobuf bindings for the SDV Parking Demo System"
publish = false

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
