[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared library for RHIVOS services - common types, utilities, and configurations"

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
config.workspace = true

[dev-dependencies]
proptest.workspace = true
