[package]
name = "update-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "process"] }
tonic = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
