[package]
name = "update-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
futures = "0.3"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
proptest = "1"
tempfile = "3"
