[package]
name = "update-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.11"
